style(Headline): fix centering issue on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,8 @@ div#__next > div {
 }
 
 .magic-grid {
-  display: flex;
+  display: grid;
+  grid-template-rows: 1fr 4fr;
   flex-direction: column;
 }
 
